fix - scrollbar in firefox and IE

--- a/modules/tools/gfi/themes/trafficCount/style.less
+++ b/modules/tools/gfi/themes/trafficCount/style.less
@@ -19,10 +19,8 @@
             width: 320px;
         }
         .table {
-            margin-top:10px;
             padding-left: 5px;
             padding-right: 5px;
-
             .tableTopLeft {
                 text-align: center;
                 vertical-align: middle;
@@ -45,7 +43,7 @@
         }
         .graph {
             width: 580px;
-            min-height: 285px;
+            min-height: 260px;
             div[class^="trafficCountDiagram"] {
                 .dot {
                     cursor: pointer;
@@ -83,6 +81,10 @@
                 button {
                     height: 35px;
                 }
+            }
+            .table {
+                margin-top: 20px;
+                margin-bottom: 10px;
             }
         }
         .padded {
